Fixed color for visibility operator

--- a/webview/css/diagram.css
+++ b/webview/css/diagram.css
@@ -88,7 +88,7 @@ text {
 }
 
 .visibility {
-    fill: var(--vscode-editor-selectionHighlightBackground);
+    fill: #569cd6;
 }
 
 .key {
